tests/paczka1/fuzzy1/10122954.err
Error in line 3: brF7Iq4rW A362 4,4
Error in line 11: brF7Iq4rW S662 0,1
Error in line 22: 2Nn S442 412,09
Error in line 30: Mkcx69 S442 40,8
